# 3d-model-viewer

./: .gitignore  Architecture.md  CMakeLists.txt  CONTEXT.md  README.md  ROADMAP.md  config.json  imgui.ini
assets/shaders/: frag.glsl  plane_frag.glsl  plane_vert.glsl  vert.glsl
src/: App.cpp  App.hpp  Camera.hpp  Config.cpp  Config.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp  main.cpp
src/Core/: Event.hpp  Input.cpp  Input.hpp  InputActions.hpp  InputManager.cpp  InputManager.hpp  KeyCodes.hpp  Layer.hpp  LayerStack.hpp  Log.cpp  Log.hpp  Transform.cpp  Transform.hpp  Window.cpp  Window.hpp
src/Editor/: EditorLayer.cpp  EditorLayer.hpp
src/Graphics/: Camera.cpp  Camera.hpp  GeometryManager.cpp  GeometryManager.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/Scene/: Model.cpp  Model.hpp  Scene.cpp  Scene.hpp
src/UI/: ImGuiLayer.cpp  ImGuiLayer.hpp
